# kdevelop-claude-plugin

./: CMakeLists.txt  README.md  kdevclaudeplugin.json
settings/: claudeconfigpage.cpp  claudeconfigpage.h  claudesettings.cpp  claudesettings.h  kdeclaudeplugin.kfcg
src/: claudeapi.cpp  claudeapi.h  claudeconfig.ui  claudeplugin.cpp  claudeplugin.h  claudeview.cpp  claudeview.h  claudeview.ui  googleauth.cpp  googleauth.h  main.cpp
